--- a/react-app/package.json
+++ b/react-app/package.json
@@ -2,14 +2,20 @@
   "name": "react-app",
   "private": true,
   "version": "0.0.0",
+  "main": "electron.ts",
+  "homepage": "./",
   "type": "module",
   "scripts": {
+    "start": "electron .",
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "electron-start": "concurrently \"npm:dev\" \"npm:start\"",
+    "build": "vite build && tsc",
+    "electron-build": "electron-builder",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,6 +23,9 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "concurrently": "^8.2.0",
+    "electron": "^25.1.1",
+    "electron-builder": "^24.4.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
