--- a/react-app/package.json
+++ b/react-app/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^8.2.0",
     "electron": "^25.1.1",
     "electron-builder": "^24.4.0",
+    "prettier": "2.8.8",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
