--- a/react-app/frontend/package.json
+++ b/react-app/frontend/package.json
@@ -6,12 +6,12 @@
   "homepage": "./",
   "type": "module",
   "scripts": {
-    "start": "electron .",
-    "dev": "vite",
-    "electron-start": "concurrently \"npm:dev\" \"npm:start\"",
-    "build": "vite build && tsc",
-    "electron-build": "electron-builder",
-    "postinstall": "electron-builder install-app-deps"
+    "start": "./node_modules/.bin/electron .",
+    "dev": "./node_modules/.bin/vite",
+    "electron-start": "./node_modules/.bin/concurrently \\\"npm:dev\\\" \\\"npm:start\\\"",
+    "build": "./node_modules/.bin/vite build && tsc",
+    "electron-build": "./node_modules/.bin/electron-builder",
+    "postinstall": "./node_modules/.bin/electron-builder install-app-deps"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
