--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "frontend/src"
   ],
   "references": [{ "path": "./tsconfig.node.json"}]
 }
