--- a/app/ts_config/tsconfig.json
+++ b/app/ts_config/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "frontend/src"
+    "../frontend/src"
   ],
   "references": [{ "path": "./tsconfig.node.json"}]
 }
