--- a/app/package.json
+++ b/app/package.json
@@ -3,21 +3,22 @@
   "private": true,
   "version": "0.0.0",
   "main": "electron/electron.ts",
-  "homepage": "./",
-  "type": "module",
+  "homepage": "http://./",
   "scripts": {
     "start": "electron electron/electron.ts",
     "dev": "vite",
     "electron-start": "concurrently \"npm run dev\" \"npm run start\"",
     "build": "vite build && tsc",
     "electron-build": "electron-builder",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "test": "jest"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
     "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
@@ -26,8 +27,15 @@
     "concurrently": "^8.2.0",
     "electron": "^25.1.1",
     "electron-builder": "^24.4.0",
+    "jest": "^29.5.0",
     "prettier": "2.8.8",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
