--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/node": "^20.3.1",
     "bootstrap": "^5.3.0",
     "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
