--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.3.1",
     "bootstrap": "^5.3.0",
     "electron-is-dev": "^2.0.0",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
