--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/node": "^20.3.1",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
@@ -24,6 +25,8 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
