--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/node": "^20.3.1",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
@@ -27,6 +26,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
@@ -35,7 +35,8 @@
     "electron-builder": "^24.4.0",
     "jest": "^29.5.0",
     "prettier": "2.8.8",
-    "typescript": "^4.9.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5",
     "vite": "^4.1.0"
   },
   "directories": {
